--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "5.0.0-beta.0",
     "type": "module",
     "engines": {
-        "node": ">=22.0.0"
+        "node": ">=20.0.0"
     },
     "scripts": {
         "start": "node index.js",
@@ -15,13 +15,13 @@
     },
     "license": "Apache-2.0",
     "author": {
-        "name": "Naruya Izumi",
-        "email": "sexystyle088@gmail.com",
-        "url": "https://linkbio.co/naruyaizumi"
+        "name": "RexxHayanasi",
+        "email": "rexxhayanasi@gmail.com",
+        "url": "-"
     },
     "dependencies": {
         "awesome-phonenumber": "^7.5.0",
-        "baileys": "github:Itsukichann/Baileys",
+        "baileys": "npm:@@rexxhayanasi/elaina-bail",
         "better-sqlite3": "^12.4.1",
         "canvas": "^3.2.0",
         "chalk": "^5.6.2",
@@ -34,7 +34,8 @@
         "ssh2": "^1.17.0",
         "syntax-error": "^1.4.0",
         "yargs": "^18.0.0",
-        "yt-search": "^2.13.1"
+        "yt-search": "^2.13.1",
+        "wa-sticker-formatter": "^4.4.4"
     },
     "devDependencies": {
         "@eslint/js": "^9.36.0",
