--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,7 @@ PAIRING_NUMBER=xxxx
 PAIRING_AUTH=true
 
 # ===== API =====
-API_BTZ=https://api.betabotz.eu.org
-APIKEY_BTZ=yourapikey
+APALAH 😹
 
 # ===== VPS PANEL =====
 PANEL_DOMAIN=https://
