--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "liora",
-    "version": "5.0.0-beta.0",
+    "version": "1.0.0",
     "type": "module",
     "engines": {
         "node": ">=20.0.0"
@@ -23,12 +23,13 @@
         "awesome-phonenumber": "^7.5.0",
         "baileys": "npm:@@rexxhayanasi/elaina-bail",
         "better-sqlite3": "^12.4.1",
-        "canvas": "^3.2.0",
+        "canvafy": "^7.2.1",
         "chalk": "^5.6.2",
         "cheerio": "^1.1.2",
         "dotenv": "^17.2.2",
         "file-type": "^21.0.0",
         "node-webpmux": "^3.2.1",
+        "jimp": "^0.22.12",
         "pino": "^9.11.0",
         "sharp": "^0.34.4",
         "ssh2": "^1.17.0",
